// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client-to-server packet round trips > round-trips agarrarItem 1`] = `
Uint8Array [
  205,
]
`;

exports[`client-to-server packet round trips > round-trips attackMele 1`] = `
Uint8Array [
  229,
]
`;

exports[`client-to-server packet round trips > round-trips attackRange 1`] = `
Uint8Array [
  236,
  55,
  44,
]
`;

exports[`client-to-server packet round trips > round-trips attackSpell 1`] = `
Uint8Array [
  243,
  8,
  51,
  49,
  1,
]
`;

exports[`client-to-server packet round trips > round-trips buyItem 1`] = `
Uint8Array [
  214,
  4,
  25,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips changeBankTab 1`] = `
Uint8Array [
  216,
  2,
]
`;

exports[`client-to-server packet round trips > round-trips changeClanSeguro 1`] = `
Uint8Array [
  209,
]
`;

exports[`client-to-server packet round trips > round-trips changeHeading 1`] = `
Uint8Array [
  175,
  3,
]
`;

exports[`client-to-server packet round trips > round-trips changeSeguro 1`] = `
Uint8Array [
  196,
]
`;

exports[`client-to-server packet round trips > round-trips click 1`] = `
Uint8Array [
  183,
  42,
  67,
  1,
]
`;

exports[`client-to-server packet round trips > round-trips closeTrade 1`] = `
Uint8Array [
  190,
]
`;

exports[`client-to-server packet round trips > round-trips connectCharacter 1`] = `
Uint8Array [
  212,
  8,
  0,
  115,
  101,
  115,
  105,
  195,
  179,
  110,
  45,
  240,
  159,
  166,
  138,
  1,
  2,
]
`;

exports[`client-to-server packet round trips > round-trips craftItem 1`] = `
Uint8Array [
  246,
  2,
  146,
  1,
  0,
  0,
  6,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips depositBankGold 1`] = `
Uint8Array [
  224,
  128,
  132,
  30,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips dialog 1`] = `
Uint8Array [
  221,
  16,
  0,
  194,
  161,
  72,
  111,
  108,
  97,
  44,
  32,
  65,
  114,
  103,
  101,
  110,
  116,
  117,
  109,
  33,
]
`;

exports[`client-to-server packet round trips > round-trips equiparItem 1`] = `
Uint8Array [
  210,
  7,
  0,
  0,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips marketAction 1`] = `
Uint8Array [
  239,
  60,
  0,
  123,
  34,
  97,
  99,
  116,
  105,
  111,
  110,
  34,
  58,
  34,
  98,
  117,
  121,
  34,
  44,
  34,
  108,
  105,
  115,
  116,
  105,
  110,
  103,
  73,
  100,
  34,
  58,
  34,
  108,
  105,
  115,
  116,
  105,
  110,
  103,
  45,
  55,
  34,
  44,
  34,
  101,
  120,
  112,
  101,
  99,
  116,
  101,
  100,
  80,
  114,
  105,
  99,
  101,
  34,
  58,
  51,
  53,
  48,
  125,
]
`;

exports[`client-to-server packet round trips > round-trips ping 1`] = `
Uint8Array [
  184,
  64,
  226,
  1,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips position 1`] = `
Uint8Array [
  176,
  4,
  128,
  61,
  241,
  255,
]
`;

exports[`client-to-server packet round trips > round-trips reorderBankItem 1`] = `
Uint8Array [
  230,
  3,
  12,
]
`;

exports[`client-to-server packet round trips > round-trips reorderInventoryItem 1`] = `
Uint8Array [
  235,
  2,
  11,
]
`;

exports[`client-to-server packet round trips > round-trips reorderSpell 1`] = `
Uint8Array [
  228,
  1,
  10,
]
`;

exports[`client-to-server packet round trips > round-trips resyncPosition 1`] = `
Uint8Array [
  187,
]
`;

exports[`client-to-server packet round trips > round-trips retosAction 1`] = `
Uint8Array [
  248,
  45,
  0,
  123,
  34,
  97,
  99,
  116,
  105,
  111,
  110,
  34,
  58,
  34,
  106,
  111,
  105,
  110,
  34,
  44,
  34,
  99,
  104,
  97,
  108,
  108,
  101,
  110,
  103,
  101,
  73,
  100,
  34,
  58,
  34,
  99,
  104,
  97,
  108,
  108,
  101,
  110,
  103,
  101,
  45,
  50,
  34,
  125,
]
`;

exports[`client-to-server packet round trips > round-trips sellItem 1`] = `
Uint8Array [
  222,
  9,
  13,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips tirarItem 1`] = `
Uint8Array [
  200,
  12,
  0,
  0,
  0,
  244,
  1,
]
`;

exports[`client-to-server packet round trips > round-trips toggleHiddenSkill 1`] = `
Uint8Array [
  244,
]
`;

exports[`client-to-server packet round trips > round-trips useItemClick 1`] = `
Uint8Array [
  197,
  18,
  0,
  0,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips useItemU 1`] = `
Uint8Array [
  203,
  20,
  0,
  0,
  0,
]
`;

exports[`client-to-server packet round trips > round-trips withdrawBankGold 1`] = `
Uint8Array [
  237,
  176,
  113,
  11,
  0,
]
`;
